--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(gdsCoxSurv)
 export(impute2CoxSurv)
 export(michiganCoxSurv)
 export(plinkCoxSurv)
+export(plinkCoxSurv.intime)
 export(sangerCoxSurv)
 import(GWASTools)
 import(VariantAnnotation)
