--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ importFrom(stats,rnorm)
 importFrom(stats,setNames)
 importFrom(survival,Surv)
 importFrom(survival,coxph.fit)
+importFrom(survival,agreg.fit)
 importFrom(utils,write.table)
